<resources>
    <string name="app_name">WishWash</string>
    <string name="write_message_hint">Write message</string>
    <string name="send_btn">SEND</string>
    <string name="wishwash">WishWash</string>
    <string name="slogan">Wash Whenever You Wish</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email here</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="signup_name_hint">Enter your name</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="password_hint">Enter your password here</string>
    <string name="new_password_hint">Enter your new password here</string>
    <string name="back">Back</string>
    <string name="re_enter_password">Re-enter new password</string>
    <string name="re_enter_password_hint">Re-enter your new password here</string>
    <string name="calendar">Calendar</string>
    <string name="bookings">Bookings</string>
    <string name="chat">Chat</string>
    <string name="tips">Tips</string>
    <string name="ok">OK</string>
    <string name="choose_date_calendar">Choose your date</string>
    <string name="delete">Delete</string>
    <string name="washingmachine">Washingmachine:</string>
    <string name="stop_time">Stop Time:</string>
    <string name="start_time">Time:</string>
    <string name="date">Date:</string>
    <string name="name">Name:</string>
    <string name="welcome_notification_title">Welcome to Wish Wash, </string>
    <string name="welcome_notification_content">Enjoy our app</string>
    <string name="exit_text">Please click back-button again to exit app</string>
    <string name="booking_already_reserved">Booking is already reserved by</string>
    <string name="you_have_booked">You have booked</string>
    <string name="from">from</string>
    <string name="on">on</string>
    <string name="successful_login">You have successfully logged in</string>
    <string name="failed_login">Login failed. If you don\'t have a user, please sign up</string>
    <string name="email_not_accepted">Email not accepted! Please try again</string>
    <string name="password_not_accepted">Password not accepted! Please try again</string>
    <string name="signin_unsuccessful">Sign in unsuccessful! Please try again</string>
    <string name="signin_successful">Successful sign in</string>
    <string name="password_8characters">Password needs to be at least 8 characters long!</string>
    <string name="password_not_enough_complex">Password not enough complex!</string>
    <string name="password_do_not_match">Passwords do not match! Please try again</string>
    <string name="signup_unsuccessful">Sign up unsuccessful! Please try again</string>
    <string name="signup_successful">You have successfully signed up to our service</string>
    <string name="message_fail">Error occurred, reopen chat tab - Message not send</string>


    <string-array name="times">
        <item>06–08</item>
        <item>08–10</item>
        <item>10–12</item>
        <item>12–14</item>
        <item>14–16</item>
        <item>16–18</item>
        <item>18–20</item>
    </string-array>

    <string-array name="washing_machines">
        <item>WM1</item>
        <item>WM2</item>
        <item>WM3</item>
    </string-array>

    <string-array name="video_title">
        <item>Washing made easy</item>
        <item>Best washing tips</item>
        <item>How to do laundry</item>
        <item>How to hand-wash</item>
        <item>Make clothes white</item>
        <item>Laundry routine</item>
    </string-array>

    <string-array name="video_link">
        <item>9Y2RVE8WsWI</item>
        <item>s6_sJbSLEe0</item>
        <item>4QxmleZeu9s</item>
        <item>PERlrqmj6Cw</item>
        <item>ygxbTbxBUCg</item>
        <item>rysvSyuBymE</item>
    </string-array>
</resources>
